crates/redoubt-vault/derive/src/tests/snapshots/redoubt_vault_derive__tests__expand__snapshot_named_struct_with_generics.snap
---
source: crates/redoubt-vault/derive/src/tests/expand.rs
expression: pretty(token_stream)
---
struct Container<T>
where
    T: redoubt_codec::BytesRequired + redoubt_codec::Encode + redoubt_codec::Decode,
{
    pub value: T,
    pub count: u64,
    #[codec(default)]
    __sentinel: redoubt_zero::ZeroizeOnDropSentinel,
}
use redoubt_vault_core::CipherBoxDyns as _;
impl<T> redoubt_vault_core::CipherBoxDyns<2> for Container<T>
where
    T: redoubt_codec::BytesRequired + redoubt_codec::Encode + redoubt_codec::Decode,
{
    fn to_encryptable_dyn_fields(
        &mut self,
    ) -> [&mut dyn redoubt_vault_core::Encryptable; 2] {
        [&mut self.value, &mut self.count]
    }
    fn to_decryptable_dyn_fields(
        &mut self,
    ) -> [&mut dyn redoubt_vault_core::Decryptable; 2] {
        [&mut self.value, &mut self.count]
    }
}
impl redoubt_vault_core::EncryptStruct<2> for Container<T>
where
    T: redoubt_codec::BytesRequired + redoubt_codec::Encode + redoubt_codec::Decode,
{
    fn encrypt_into(
        &mut self,
        aead: &mut redoubt_aead::Aead,
        aead_key: &[u8],
        nonces: &mut redoubt_vault_core::Nonces<2>,
        tags: &mut redoubt_vault_core::Tags<2>,
    ) -> Result<redoubt_vault_core::Ciphertexts<2>, redoubt_vault_core::CipherBoxError> {
        redoubt_vault_core::encrypt_into(
            self.to_encryptable_dyn_fields(),
            aead,
            aead_key,
            nonces,
            tags,
        )
    }
}
impl redoubt_vault_core::DecryptStruct<2> for Container<T>
where
    T: redoubt_codec::BytesRequired + redoubt_codec::Encode + redoubt_codec::Decode,
{
    fn decrypt_from(
        &mut self,
        aead: &mut redoubt_aead::Aead,
        aead_key: &[u8],
        nonces: &mut redoubt_vault_core::Nonces<2>,
        tags: &mut redoubt_vault_core::Tags<2>,
        ciphertexts: &mut redoubt_vault_core::Ciphertexts<2>,
    ) -> Result<(), redoubt_vault_core::CipherBoxError> {
        redoubt_vault_core::decrypt_from(
            &mut self.to_decryptable_dyn_fields(),
            aead,
            aead_key,
            nonces,
            tags,
            ciphertexts,
        )
    }
}
#[cfg(test)]
#[derive(Debug, Clone, Copy)]
pub enum ContainerBoxFailureMode {
    None,
    FailOnNthOperation(usize),
}
#[derive(redoubt_zero::RedoubtZero)]
pub struct ContainerBox {
    inner: redoubt_vault_core::CipherBox<Container, 2>,
    #[cfg(test)]
    failure_counter: usize,
}
impl ContainerBox {
    #[inline(always)]
    pub fn new() -> Self {
        Self {
            inner: redoubt_vault_core::CipherBox::new(redoubt_aead::Aead::default()),
            #[cfg(test)]
            failure_counter: 0,
        }
    }
    #[inline(always)]
    pub fn open<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&Container) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            if self.failure_counter > 0 {
                self.failure_counter -= 1;
                if self.failure_counter == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open(f)
    }
    #[inline(always)]
    pub fn open_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&mut Container) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            if self.failure_counter > 0 {
                self.failure_counter -= 1;
                if self.failure_counter == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_mut(f)
    }
    #[cfg(test)]
    pub fn set_failure_mode(&mut self, mode: ContainerBoxFailureMode) {
        match mode {
            ContainerBoxFailureMode::None => {
                self.failure_counter = 0;
            }
            ContainerBoxFailureMode::FailOnNthOperation(n) => {
                self.failure_counter = n;
            }
        }
    }
    #[inline(always)]
    pub fn leak_value(
        &mut self,
    ) -> Result<redoubt_zero::ZeroizingGuard<T>, redoubt_vault_core::CipherBoxError> {
        #[cfg(test)]
        {
            if self.failure_counter > 0 {
                self.failure_counter -= 1;
                if self.failure_counter == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.leak_field::<T, 0, redoubt_vault_core::CipherBoxError>()
    }
    #[inline(always)]
    pub fn leak_count(
        &mut self,
    ) -> Result<redoubt_zero::ZeroizingGuard<u64>, redoubt_vault_core::CipherBoxError> {
        #[cfg(test)]
        {
            if self.failure_counter > 0 {
                self.failure_counter -= 1;
                if self.failure_counter == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.leak_field::<u64, 1, redoubt_vault_core::CipherBoxError>()
    }
    #[inline(always)]
    pub fn open_value<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&T) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            if self.failure_counter > 0 {
                self.failure_counter -= 1;
                if self.failure_counter == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_field::<T, 0, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
    #[inline(always)]
    pub fn open_count<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&u64) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            if self.failure_counter > 0 {
                self.failure_counter -= 1;
                if self.failure_counter == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_field::<u64, 1, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
    #[inline(always)]
    pub fn open_value_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&mut T) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            if self.failure_counter > 0 {
                self.failure_counter -= 1;
                if self.failure_counter == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_field_mut::<T, 0, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
    #[inline(always)]
    pub fn open_count_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&mut u64) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            if self.failure_counter > 0 {
                self.failure_counter -= 1;
                if self.failure_counter == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_field_mut::<u64, 1, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
}
impl Default for ContainerBox {
    fn default() -> Self {
        Self::new()
    }
}
