crates/redoubt-vault/derive/src/tests/snapshots/redoubt_vault_derive__tests__expand__snapshot_named_struct_with_zeroize_on_drop_sentinel.snap
---
source: crates/redoubt-vault/derive/src/tests/expand.rs
expression: pretty(token_stream)
---
#[derive(RedoubtZero, RedoubtCodec)]
#[fast_zeroize(drop)]
struct Epsilon {
    pub master_seed: [u8; 32],
    pub encryption_key: [u8; 32],
    #[codec(default)]
    __sentinel: ZeroizeOnDropSentinel,
}
use redoubt_vault_core::CipherBoxDyns as _;
impl redoubt_vault_core::CipherBoxDyns<2> for Epsilon {
    fn to_encryptable_dyn_fields(
        &mut self,
    ) -> [&mut dyn redoubt_vault_core::Encryptable; 2] {
        [&mut self.master_seed, &mut self.encryption_key]
    }
    fn to_decryptable_dyn_fields(
        &mut self,
    ) -> [&mut dyn redoubt_vault_core::Decryptable; 2] {
        [&mut self.master_seed, &mut self.encryption_key]
    }
}
impl redoubt_vault_core::EncryptStruct<2> for Epsilon {
    fn encrypt_into(
        &mut self,
        aead: &mut redoubt_aead::Aead,
        aead_key: &[u8],
        nonces: &mut redoubt_vault_core::Nonces<2>,
        tags: &mut redoubt_vault_core::Tags<2>,
    ) -> Result<redoubt_vault_core::Ciphertexts<2>, redoubt_vault_core::CipherBoxError> {
        redoubt_vault_core::encrypt_into(
            self.to_encryptable_dyn_fields(),
            aead,
            aead_key,
            nonces,
            tags,
        )
    }
}
impl redoubt_vault_core::DecryptStruct<2> for Epsilon {
    fn decrypt_from(
        &mut self,
        aead: &redoubt_aead::Aead,
        aead_key: &[u8],
        nonces: &redoubt_vault_core::Nonces<2>,
        tags: &redoubt_vault_core::Tags<2>,
        ciphertexts: &mut redoubt_vault_core::Ciphertexts<2>,
    ) -> Result<(), redoubt_vault_core::CipherBoxError> {
        redoubt_vault_core::decrypt_from(
            &mut self.to_decryptable_dyn_fields(),
            aead,
            aead_key,
            nonces,
            tags,
            ciphertexts,
        )
    }
}
#[cfg(test)]
#[derive(Debug, Clone, Copy)]
pub enum EpsilonBoxFailureMode {
    None,
    FailOnNthOperation(usize),
}
#[derive(redoubt_zero::RedoubtZero)]
pub struct EpsilonBox {
    inner: redoubt_vault_core::CipherBox<Epsilon, 2>,
    /// Atomic so that the check below can sit in a method taking
    /// `&self`, which is what a read is.
    #[cfg(test)]
    failure_counter: core::sync::atomic::AtomicUsize,
}
impl EpsilonBox {
    #[inline(always)]
    pub fn new() -> Self {
        Self {
            inner: redoubt_vault_core::CipherBox::new(redoubt_aead::Aead::default()),
            #[cfg(test)]
            failure_counter: core::sync::atomic::AtomicUsize::new(0),
        }
    }
    #[inline(always)]
    pub fn open<F, R>(
        &self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&Epsilon) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open(f)
    }
    #[inline(always)]
    pub fn open_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&mut Epsilon) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_mut(f)
    }
    #[cfg(test)]
    pub fn set_failure_mode(&self, mode: EpsilonBoxFailureMode) {
        use core::sync::atomic::Ordering;
        match mode {
            EpsilonBoxFailureMode::None => {
                self.failure_counter.store(0, Ordering::Relaxed);
            }
            EpsilonBoxFailureMode::FailOnNthOperation(n) => {
                self.failure_counter.store(n, Ordering::Relaxed);
            }
        }
    }
    #[inline(always)]
    pub fn leak_master_seed(
        &self,
    ) -> Result<
        redoubt_zero::ZeroizingGuard<[u8; 32]>,
        redoubt_vault_core::CipherBoxError,
    > {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.leak_field::<[u8; 32], 0, redoubt_vault_core::CipherBoxError>()
    }
    #[inline(always)]
    pub fn leak_encryption_key(
        &self,
    ) -> Result<
        redoubt_zero::ZeroizingGuard<[u8; 32]>,
        redoubt_vault_core::CipherBoxError,
    > {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.leak_field::<[u8; 32], 1, redoubt_vault_core::CipherBoxError>()
    }
    #[inline(always)]
    pub fn open_master_seed<F, R>(
        &self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&[u8; 32]) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_field::<[u8; 32], 0, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
    #[inline(always)]
    pub fn open_encryption_key<F, R>(
        &self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&[u8; 32]) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_field::<[u8; 32], 1, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
    #[inline(always)]
    pub fn open_master_seed_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&mut [u8; 32]) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner
            .open_field_mut::<[u8; 32], 0, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
    #[inline(always)]
    pub fn open_encryption_key_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&mut [u8; 32]) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner
            .open_field_mut::<[u8; 32], 1, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
}
impl Default for EpsilonBox {
    fn default() -> Self {
        Self::new()
    }
}
